<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="20dp"
            android:id="@+id/settingOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile Image"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:textStyle="bold"
                android:layout_gravity="left"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/test"
                    android:id="@+id/profUserImage"
                    android:background="@drawable/circle"
                    />

                <TextView
                    android:id="@+id/profileImageEdit"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="10dp"
                    android:text="@string/edit_underLine"
                    android:textColor="@color/bottlesPrimary"
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/profileImageDelete"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <TextView
                android:id="@+id/editId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/userName"
                   android:textSize="25dp"
                   />
                <TextView
                    android:id="@+id/profileIdEdit"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
            <TextView
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                />
            <LinearLayout
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profilePasswordEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
            <TextView
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E-mail"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userEmail"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/profileEmailEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_underLine"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
            <TextView
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textSize="25dp"/>

                <TextView
                    android:layout_marginLeft="15dp"
                    android:id="@+id/profileUserNameInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info"
                android:textSize="25dp"
                android:textColor="@color/bottlesPrimary"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userInfo"
                    android:textSize="25dp"
                    />
                <TextView
                    android:layout_marginLeft="15dp"
                    android:id="@+id/profileInfoEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>
                <TextView
                    android:id="@+id/profileInfoDelete"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_underLine"
                    android:textSize="15dp"
                    android:textColor="@color/bottlesPrimary"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="#f5f5f5"
                android:id="@+id/completeButton">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="complete"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>





        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>