<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/page">

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/messagePage"/>

       <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
           android:id="@+id/swipeRefeahLayout"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <androidx.core.widget.NestedScrollView
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <LinearLayout
                   android:layout_marginBottom="82dp"
                   android:id="@+id/linearLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:visibility="visible"
                   android:orientation="vertical">
                   <de.hdodenhof.circleimageview.CircleImageView
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:src="@drawable/test"
                       android:id="@+id/profUserImage"
                       android:background="@drawable/circle"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/userName"
                       android:textSize="23dp"
                       android:textColor="@color/bottlesPrimary"
                       android:id="@+id/profUserName"
                       />
                   <LinearLayout
                       android:layout_marginTop="10dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
                       <TextView
                           android:id="@+id/followingText"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="팔로잉"
                           android:textColor="@color/bottlesPrimary"
                           android:textSize="20dp"
                           />
                       <TextView
                           android:layout_marginLeft="5dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@color/bottlesPrimary"
                           android:text="@string/following"
                           android:textSize="20dp"
                           android:id="@+id/following"
                           />
                       <TextView
                           android:id="@+id/followerText"
                           android:layout_marginLeft="20dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="팔로워"
                           android:textColor="@color/bottlesPrimary"
                           android:textSize="20dp"
                           />
                       <TextView
                           android:layout_marginLeft="5dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/follower"
                           android:textColor="@color/bottlesPrimary"
                           android:textSize="20dp"
                           android:id="@+id/follower"
                           />
                   </LinearLayout>
                   <TextView
                       android:id="@+id/profUserPref"
                       android:layout_marginTop="5dp"
                       android:gravity="center"
                       android:layout_width="220dp"
                       android:layout_height="wrap_content"
                       android:textSize="20dp"
                       android:text="@string/userPreface"/>
                   <LinearLayout
                       android:layout_marginTop="100dp"
                       android:visibility="gone"
                       android:id="@+id/homeRefreshLayout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_horizontal"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="등록한 엘범이 없거나 불러 오기를 실패했습니다..\n 상단의 + 버튼을 눌러 나만의 엘범을 만들어보세요!"/>
                       <TextView
                           android:padding = "10dp"
                           android:id="@+id/homeRefreshButton"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="새로 고침"
                           android:textColor="@color/bottlesPrimary"
                           android:background="@drawable/border9_refresh_button_blue"
                           android:textSize="20dp"
                           />

                   </LinearLayout>

                   <GridLayout
                       android:id="@+id/imageGrid"
                       android:layout_marginTop="5dp"
                       android:foregroundGravity="center"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                       android:orientation="horizontal"
                       android:columnCount="2">
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                       <ImageView
                           android:scaleType="fitXY"
                           android:layout_margin="5dp"
                           android:layout_columnWeight="1"
                           android:layout_rowWeight="1"
                           android:layout_width="0dp"
                           android:layout_height="180dp"
                           android:layout_weight="1"
                           android:src="@drawable/test"/>
                   </GridLayout>
               </LinearLayout>
           </androidx.core.widget.NestedScrollView>
       </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>